...
    final state = context.watch<ResetBloc>().state;

    return HorizonUI.HorizonDialog(
        onBackButtonPressed: () {
          GoRouter.of(context).pop();
        },
        title: 'Reset wallet',
        body: stepOne
            ? Column(
                children: [
                  Padding(
                    padding: const EdgeInsets.all(8.0),
                    child: RichText(
...
                        fontSize: 14,
                        fontWeight: FontWeight.w400,
                        color: redErrorText),
                  ),
                  const SizedBox(height: 16),
                  TextField(
                    key: const Key('resetConfirmationTextField'),
                    controller: resetConfirmationController,
                    decoration: const InputDecoration(
                      hintText: 'Enter text "RESET WALLET" to continue',
                    ),
                  ),
                  const SizedBox(height: 16),
...
