...
                                    onPressed: () {
                                      final session =
                                          context.read<SessionStateCubit>();
                                      session.onOnboardingImport();
                                    },
                                    child: TextButtonContent(
                                      value: 'Load seed phrase',
                                    ),
                                  ),
                                ),
                              ],
                            );
                          },
...
