...
        Padding(
          padding:
              EdgeInsets.symmetric(horizontal: isSmallScreen ? 20.0 : 40.0),
          child: Column(
            children: [
              SelectableText(
                'Please create a password',
                textAlign: TextAlign.center,
                style: Theme.of(context).textTheme.titleMedium,
              ),
              const SizedBox(height: 10),
              SelectableText(
                "This password encrypts and decrypts your recovery phrase. You will be able to access your wallet with just the password, but you'll need the seed phrase to restore it.",
...
